# MSc-Project

./: README.md
pal_face_detector_opencv/src/: face_detector.cpp
person_follower/: CMakeLists.txt  LICENSE  README.md  package.xml
person_follower/local_planner/: local_planner.yaml
person_follower/src/person_detection/src/: welcoming.py
