<?xml version="1.0"?>
<package format="2">
  <name>person_follower</name>
  <version>0.0.0</version>
  <description>The person_follower package</description>

  <maintainer email="sam_walsh1@hotmail.co.uk">Sam Walsh</maintainer>

  <license>BSD</license>

  <url type="website">https://gitlab.com/sc16sw/person_follower_robot</url>

  <author email="sam_walsh1@hotmail.co.uk">Sam Walsh</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>

  <export>
  </export>
</package>
